Fix too tall icon on myaccount wrapping.

--- a/themes/root/css/icon-helper.css
+++ b/themes/root/css/icon-helper.css
@@ -14,6 +14,7 @@
 .icon--img {
     display: inline-block;
     max-width: 1.25em;
+    height: fit-content;
     margin-top: 0.125em;
     text-align: center;
     vertical-align: top;
